2004-01-07  Saito <saito2@digitalme.com>

	* timidity/playmidi.c, timidity/instrum.[ch],
	  timidity/mod2midi.c, timidity/smplfile.c:
	  Fix around SoundFont.

2004-01-06  Saito <saito2@digitalme.com>

	* timidity/playmidi.c, timidity/sndfont.c,
	  timidity/instrum.h, timidity/mix.c:
	  Support for SoundFont's Sample Link.
	  FIx around modulation wheel.
	  Fix around MoogVCF.
	  Undo change of opt_drum_power.

2004-01-05  Saito <saito2@digitalme.com>

	* timidity/playmidi.[ch], timidity/sndfont.c,
	  timidity/mix.c, timidity/effect.c:
	  Fix around SoundFont.
	  Fix LPF resonance.
	  Add soft clipping function to noise-shaping on 16bit output.

2004-01-04  Saito <saito2@digitalme.com>

	* timidity/playmidi.[ch], timidity/mix.c, timidity/sndfont.c:
	  Fix resonance of MoogVCF.
	  Fix around LPF.
	  Fix around SoundFont.

2004-01-03  Saito <saito2@digitalme.com>

	* timidity/playmidi.c:
	  Fix NRPN Resonance and Harmonic Content.
	* timidity/tables.c:
	  Change modulation delay table of Chorus Effect.

2004-01-02  Saito <saito2@digitalme.com>

	* timidity/playmidi.c:
	  Fix around modulation wheel.
	* timidity/sndfont.c:
	  Fix around SoundFont.

2003-12-31  Saito <saito2@digitalme.com>

	* timidity/sndfont.c, timidity/reverb.c:
	  Fix delay modulation.
	  Fix about SoundFont.
	* timidity/playmidi.c:
	  Improve compatibility of opt_drum_power.

2003-12-30  Saito <saito2@digitalme.com>

	* timidity/playmidi.[ch]:
	  Fix RPN Modulation Depth Range.

2003-12-29  Saito <saito2@digitalme.com>

	* timidity/playmidi.[ch], timidity/readmidi.c:
	  Fix SysEx.

2003-12-28  Saito <saito2@digitalme.com>

	* timidity/playmidi.[ch], timidity/readmidi.c, timidity/reverb.[ch]:
	  Support for Velocity Limit and Note Limit through GS / XG SysEx.
	  Support for Rx. Note On and Rx. Note Off through GS SysEx.
	  Support for XG SysEx Drum Setup.
	  Support for Dry Level through XG SysEx.

2003-12-27  Saito <saito2@digitalme.com>

	* timidity/playmidi.[ch], timidity/readmidi.[ch]: