@@ -1,3 +1,8 @@
+2004-01-08  Saito <saito2@digitalme.com>
+
+	* timidity/sndfont.c:
+	  Fix vintage bug of SoundFont.
+
 2004-01-07  Saito <saito2@digitalme.com>
 
 	* timidity/playmidi.c, timidity/instrum.[ch],
